--- a/Princess/Princess.html
+++ b/Princess/Princess.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Activity 8</title>
+        <title>Gomen Ne</title>
         <link rel="stylesheet" type="text/css" href="Princess.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lilita+One&display=swap" rel="stylesheet">
